# opportunity-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml  refresh.yml  test.yml
docs/: ADAPTER_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  SOURCES.md
examples/: claude_desktop_config.dev.json  claude_desktop_config.json
src/opportunity_mcp/: __init__.py  extract.py  index.py  refresh.py  schema.py  server.py
src/opportunity_mcp/adapters/: __init__.py  base.py  rss.py
tests/: test_adapters.py  test_extract.py  test_index.py
