[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opportunity-mcp"
version = "0.1.1"
description = "Search youth opportunities (scholarships, fellowships, internships, conferences) from any AI assistant via MCP."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Opportunity MCP Contributors" }]
requires-python = ">=3.12"
keywords = [
    "mcp",
    "model-context-protocol",
    "scholarships",
    "fellowships",
    "opportunities",
    "ai",
    "claude",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "mcp>=1.2.0",
    "feedparser>=6.0.10",
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "pydantic>=2.6",
    "dateparser>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
opportunity-mcp = "opportunity_mcp.server:main"
opportunity-mcp-refresh = "opportunity_mcp.refresh:main"

[project.urls]
Homepage = "https://github.com/opportunity-mcp/opportunity-mcp"
Issues = "https://github.com/opportunity-mcp/opportunity-mcp/issues"
Repository = "https://github.com/opportunity-mcp/opportunity-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/opportunity_mcp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
strict_optional = true
ignore_missing_imports = true
